# ShowroomPlayer

./: .gitignore  CMakeLists.txt  Main.qml  ShowroomPlayer.qmlproject  ShowroomPlayer.qrc  conanfile.py  qmlmodules.cmake  readme.md  readme_cn.md
cmake/: Libmpv.cmake  finalize_macos_bundle.cmake  fixup_libmpv_rpath.cmake  generate_libmpv_import_lib.py  version.h.in
content/: App.qml  CMakeLists.txt  Theme.qml
content/components/: AccentButton.qml  DarkTextField.qml  IconOverlayButton.qml  SecondaryButton.qml  SplitHandle.qml
content/icon/: app.rc  icon.icns
content/panels/: ChatPanel.qml  LoginDialog.qml  SidebarPanel.qml  VideoPanel.qml
imports/ShowroomPlayer/: CMakeLists.txt  Constants.qml  GiftContributorModel.cpp  GiftContributorModel.h  LiveChatModel.cpp  LiveChatModel.h  LiveGiftModel.cpp  LiveGiftModel.h  MpvVideoItem.cpp  MpvVideoItem.h  ShowroomApi.cpp  ShowroomApi.h  ShowroomAuth.cpp  ShowroomAuth.h  ShowroomController.cpp  ShowroomController.h  ShowroomGiftPt.cpp  ShowroomGiftPt.h  ShowroomLiveSocket.cpp  ShowroomLiveSocket.h  ShowroomLog.cpp  ShowroomLog.h  ShowroomPlayerModule.cmake  ShowroomSessionStore.cpp  ShowroomSessionStore.h  UserListModel.cpp  UserListModel.h  qmldir
src/: app_environment.h  import_qml_plugins.h  main.cpp
